--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <span id="directory">/path/to/dir</span>
     </div>
     <div class="flex w-full h-screen">
-      <ul class="p-2">
+      <ul id="fileList" class="p-2">
         <li>No Files to Display</li>
       </ul>
       <div class="flex flex-col flex-1 p-2">
