keyboard save, localstorage history

--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
     <title>Hello World!</title>
   </head>
   <body class="h-screen flex flex-col">
-    <div>
+    <div class="bg-slate-200">
       <button id="openFolder" class="bg-blue-500 text-white m-2 p-2">Open Folder</button>
       <button id="openFile" class="bg-blue-500 text-white m-2 p-2">Open File</button>
       <button id="save" class="bg-blue-500 text-white p-2 m-2">Save</button>
 
-      <span id="directory">/path/to/dir</span>
+      <span id="directory"></span>
     </div>
     <div class="flex w-full h-screen">
       <ul id="fileList" class="p-2">
-        <li>No Files to Display</li>
+        <!-- <li>No Files to Display</li> -->
       </ul>
       <div class="flex flex-col flex-1 p-2">
-        <span>Filename.js</span>
-        <textarea id="textEditor" class="w-full h-full bg-slate-200 p-2">test</textarea>
+        <span id="fileName"></span>
+        <textarea id="textEditor" class="w-full h-full bg-slate-200 p-2 hidden"></textarea>
       </div>
     </div>
 
